fix alignment

--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  text-align: center;
   background-color: $dark-grey;
   color: $white-color;
   padding: 4.8rem 0;
