--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -15,6 +15,7 @@
   }
 
   .contact-wrapper {
+    text-align: center;
     margin-top: 3.2rem;
     padding: 0 2rem;
     backface-visibility: hidden;
